# ChatICommentsVk

./: answers.yml  config.yml  config_dev.yml  pyproject.toml  todo.txt
chaticommentsvk/: choice_main.py  loader.py  main.py  some_main.py
chaticommentsvk/apps/bot/filters/: admin_filters.py  common_menu_filters.py  group_message_filters.py
chaticommentsvk/apps/bot/handlers/: common_commands.py  common_menu.py
chaticommentsvk/apps/bot/handlers/admin_handlers/: admin_commands.py  bot_settings.py  customize_queue_.py  privilege_settings.py
chaticommentsvk/apps/bot/markups/: __init__.py  admin.py  bot_settings.py  customize_queue.py  settings.py
chaticommentsvk/apps/bot/middleware/: auth_middleware.py  trottling_middleware.py
chaticommentsvk/apps/bot/utils/: admin_helpers.py  message_processes.py  queue_helpers.py  request_helpers.py
chaticommentsvk/apps/vk/: checker.py  classes.py
chaticommentsvk/config/: __init__.py  answer.py  config.py  log_settings.py
chaticommentsvk/db/: db_main.py
tests/: probe.py  probe_db.py  test_chaticommentsvk.py
tests/test_apps/test_vk/: conftest.py  test_checker.py
