[tool.poetry]
name = "ChatICommentsVk"
version = "0.1.0"
description = ""
authors = ["Rasul Taimaskhanov <81189712+taimaskhanov11@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
aiovk = "^4.0.0"
aiogram = "^2.19"
pydantic = "^1.9.0"
PyYAML = "^6.0"
aioredis = { extras = ["hiredis"], version = "^2.0.1" }
redis-om = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "*"
isort = "*"
pytest-asyncio = "^0.18.3"
pytest-xdist = "^2.5.0"

[tool.pytest.ini_options]
addopts="--color=yes"
asyncio_mode="auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
